# eagle-raytracing

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindGLFW.cmake
data/shaders/: compute.comp  quad.frag  quad.vert
eagle/: Eagle.h  EntryPoint.cpp
eagle/application/: EventManager.h  EventMaster.h  RaytracerApplication.h  RaytracerApplicationGlobalDefinitions.h  Scene.h  SceneLayer.h  SceneManager.h
eagle/application/components/: Box.h  Camera.h  CameraController.h  DirectionalLight.h  PhysicsSettings.h  RaytracerData.h  Rigidbody.h  SceneData.h  SingletonComponent.h  Spawner.h  Sphere.h  Transform.h
eagle/application/components/physics/: Collider.h  CollisionSettings.h  PhysicsSettings.h  Rigidbody.h
eagle/application/components/physics/shapes/: BoxCollider.h  ColliderShape.h  PlaneCollider.h  SphereCollider.h
eagle/application/editor/: ComputeDataEditor.h  DebugSettingsWindow.h  EditorDockingWindow.h  EditorLayer.h  EditorMaster.h  EditorWindow.h  FooWindow.h  SceneWindow.h
eagle/application/raytracer/: Camera.h  CameraController.h  ComputeData.h  RaytracerLayer.h  RaytracerMaster.h  Transform.h
eagle/application/renderer/: RenderLayer.h  RenderMaster.h  TextureLoader.h
eagle/application/source/: SceneLayer.cpp
eagle/application/source/editor/: ComputeDataEditor.cpp  DebugSettingsWindow.cpp  EditorDockingWindow.cpp  EditorLayer.cpp  EditorMaster.cpp  EditorWindow.cpp  FooWindow.cpp  SceneWindow.cpp
eagle/application/source/raytracer/: CameraController.cpp  RaytracerLayer.cpp  RaytracerMaster.cpp
eagle/application/source/renderer/: RenderLayer.cpp  RenderMaster.cpp  TextureLoader.cpp
eagle/application/source/systems/: CameraSystem.cpp  CollisionSystem.cpp  LightSystem.cpp  PhysicsSystem.cpp  RaytracerSystem.cpp  SpawnerSystem.cpp
eagle/application/source/systems/physics/: CollisionSystem.cpp  PhysicsSystem.cpp
eagle/application/source/systems/physics/collision/: CollisionManager.cpp  CollisionSolver.cpp
eagle/application/source/systems/physics/collision/shapes/: BoxCollider.cpp  ColliderShape.cpp  PlaneCollider.cpp  SphereCollider.cpp
eagle/application/systems/: CameraSystem.h  CollisionSystem.h  LightSystem.h  PaintOnCollisionSystem.h  PhysicsSystem.h  RaytracerSystem.h  SpawnerSystem.h
eagle/application/systems/physics/: CollisionSystem.h  PhysicsSystem.h
eagle/application/systems/physics/collision/: Collision.h  CollisionManager.h  CollisionSolver.h
eagle/core/: Application.h  Core.h  CoreGlobalDefinitions.h  InputLayer.h  Time.h
eagle/core/events/: Event.h
eagle/core/renderer/: CommandBuffer.h  Framebuffer.h  Image.h  RenderPass.h  RenderTarget.h  RenderingContext.h  RenderingCore.h  Shader.h  Texture.h  Texture2D.h  UniformBuffer.h
eagle/core/renderer/vulkan/: VulkanCommandBuffer.h  VulkanContext.h  VulkanConversor.h  VulkanDescriptorSet.h  VulkanFramebuffer.h  VulkanHelper.h  VulkanImage.h  VulkanRenderPass.h  VulkanShader.h  VulkanTexture.h  VulkanTexture2D.h  VulkanUniformBuffer.h
eagle/core/source/: Application.cpp
eagle/core/source/renderer/vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanComputeShader.cpp  VulkanContext.cpp  VulkanConversor.cpp  VulkanDescriptorSet.cpp  VulkanFramebuffer.cpp  VulkanHelper.cpp  VulkanImage.cpp  VulkanIndexBuffer.cpp  VulkanRenderPass.cpp  VulkanRenderTarget.cpp  VulkanShader.cpp  VulkanShaderUtils.cpp  VulkanStorageBuffer.cpp  VulkanTexture.cpp  VulkanTexture2D.cpp  VulkanUniformBuffer.cpp  VulkanVertexBuffer.cpp
eagle/editor/: EditorGlobalDefinitions.h
eagle/editor/source/: EditorMaster.cpp
eagle/editor/source/window/: DebugSettingsWindow.cpp
eagle/engine/: EngineGlobalDefinitions.h  EventMaster.h  SceneLayer.h
eagle/engine/components/: RaytracerData.h  Spawner.h
eagle/engine/source/: SceneLayer.cpp
eagle/engine/source/renderer/: RenderMaster.cpp  TextureLoader.cpp
eagle/engine/source/systems/: RaytracerSystem.cpp  SpawnerSystem.cpp
eagle/engine/source/systems/physics/: CollisionSystem.cpp
eagle/engine/systems/: RaytracerSystem.h
eagle/raytracer/: Raytracer.h  RaytracerGlobalDefinitions.h  RaytracerLayer.h  RenderLayer.h
eagle/raytracer/editor/: EditorLayer.h  EditorMaster.h  EditorWindow.h  FooWindow.h
eagle/raytracer/main/: MainLayer.h
eagle/raytracer/renderer/: RenderLayer.h  RenderMaster.h
eagle/raytracer/source/: RaytracerLayer.cpp  RenderLayer.cpp
eagle/raytracer/source/editor/: EditorLayer.cpp  EditorMaster.cpp  EditorWindow.cpp  FooWindow.cpp
eagle/raytracer/source/main/: MainLayer.cpp
eagle/raytracer/source/renderer/: RenderLayer.cpp  RenderMaster.cpp
